@@ -111,7 +111,7 @@ public class DiscoveryUtil
      */
     public final static String FEATURE_AUDIO_MUTE = "http://jitsi.org/protocol/audio-mute";
 
-    private static final List<String> defaultFeatures = Arrays.asList(
+    private static final List<String> defaultFeatures = List.of(
             FEATURE_AUDIO,
             FEATURE_VIDEO,
             FEATURE_SCTP,
@@ -123,7 +123,7 @@ public class DiscoveryUtil
      */
     static public List<String> getDefaultParticipantFeatureSet()
     {
-        return defaultFeatures;
+        return new ArrayList<>(defaultFeatures);
     }
 
     /**
@@ -149,7 +149,6 @@ public class DiscoveryUtil
 
         long start = System.currentTimeMillis();
 
-        logger.info("Doing feature discovery for " + address);
 
         List<String> participantFeatures = null;
         try
@@ -168,14 +167,15 @@ public class DiscoveryUtil
             logger.warn(String.format( "Failed to discover features for %s: %s", address, e.getMessage()));
         }
 
+        long tookMillis = System.currentTimeMillis() - start;
         if (participantFeatures == null)
         {
-            logger.warn("Failed to discover features for "+ address + " assuming default feature set.");
+            logger.warn("Failed to discover features for "+ address + " assuming default feature set. Took " +
+                    "" + tookMillis + " ms.");
 
             return getDefaultParticipantFeatureSet();
         }
-
-        long tookMillis = System.currentTimeMillis() - start;
+        logger.info("Discovered features for " + address + " in " + tookMillis + " ms.");
 
         if (logger.isDebugEnabled())
         {
